v20070323
	* Fixed typoes in socklib.c
v20070306
	* Fix issue with pipes and no destination file on receiver
v20070218
	* Doc fix
v20070205
	* Adapt to busybox 1.4.1 (Config.in)
v20070131
	* Added #include <linux/types.h> to make it compile under (K)ubuntu (to
	be confirmed)
	* Fix uninitialized variable in udp-receiver
v20070129
	* Adapt to busybox 1.3.2
v20061220
	* Adapt to busybox 1.3.0
v20061216
	* Darwin patch
	* Timeout method on receiver
	* Refactoring to postpone file creation until sender is located
	* Added start-timeout flag
v20060929
	* Fix usage message to use full names for --mcast-data-address and
	mcast-rdv-address
v20060921
	* Avoid variable name "log", apparently, for older compilers,
	this shadows the name of a built-in
	* Include uio.h into socklib.h, needed with older include files for
	iovec
v20060920
	* Added missing format string to printMyIp
v20060917
	* If --rexmit-hello-interval set on sender, still only display prompt
	once on receiver
	* Improved logging (on sender, offer option to periodically
	log instantaneous bandwidth, log retransmission, and added datestamp
	to all log)
	* Enable autoconf (configure) in order to make it easier to
	compile it on other Unices
	* Reorganized cmd.html file to make it cleaner HTML (all the
	man stuff now in separate files)
	* Fix a buffer overrun on Windows
v20060619
	* Add null-termination to option lists
v20060525
	* Change copyright into license in RPM spec file
	* Fix allocation of FEC memory, so that it only happens when
	needed
	* Fix udpcast for loopback device (send to "self" address)
	* In FEC mode make sure we don't get an excessive number of
	blocks if number of slices is too small
	* Daemon-mode for udp-sender
v20060325
	* Fix packaging, so that we now can build an clean rpm with
	just the command-line programs. The mkimage script for the
	embedded system is now within another RPM (udpcast-mkimage)
	which, for the moment, is still constructed the old kludgy
	way.
v20060320